fixed spacings between menu items list

--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ footer {
   background-color: white;
   height: 3.5rem;
   border-radius: 10px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(100, 100, 111, 0.15) 0px 7px 29px 0px;
   margin-bottom: 1rem;
   overflow: hidden;
   opacity: 0;
@@ -346,6 +346,8 @@ footer {
 
 .section-title {
   font-size: 0.9rem;
+  color: #626263;
+  /* margin-top: 1.5rem; */
 }
 .section-underline {
   width: 2.3rem;
@@ -355,12 +357,15 @@ footer {
   background-color: #88e0cb;
 }
 
+.menu-items {
+  margin-bottom: 2rem;
+}
+
 .order-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
-  margin-top: 3rem;
   margin-bottom: 4rem;
 }
 
